--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="jake.gif" alt="cat asking question" class="responsive" />
 
     <!-- Background Audio -->
-    <audio id="backgroundMusic" autoplay loop muted>
+    <audio id="backgroundMusic" autoplay loop>
       <source src="christmas1.mp3" type="audio/mpeg" />
       <source src="background-music.ogg" type="audio/ogg" />
       Your browser does not support the audio element.
